--- a/index.html
+++ b/index.html
@@ -6,10 +6,13 @@
     <link rel="stylesheet" href="./assets/css/style.css">
     <title>website</title>
 </head>
-
+<!-- Information about the Webpage-->
 <body>
+    <!-- Webpage Company Name-->
     <div class="header">
+        
         <h1>Hori<span class="seo">seo</span>n</h1>
+        <!-- Information About Company main services-->
         <div>
             <ul>
                 <li>
@@ -24,6 +27,7 @@
             </ul>
         </div>
     </div>
+    <!-- Company img -->
     <div class="hero"></div>
     <div class="content">
         <div class="search-engine-optimization">
@@ -33,6 +37,7 @@
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
             </p>
         </div>
+        <!-- Unorder list Company Information-->
         <div id="online-reputation-management" class="online-reputation-management">
             <img src="./assets/images/online-reputation-management.jpg" class="float-right" />
             <h2>Online Reputation Management</h2>
@@ -48,6 +53,7 @@
             </p>
         </div>
     </div>
+    <!-- Benefits Information-->
     <div class="benefits">
         <div class="benefit-lead">
             <h3>Lead Generation</h3>
@@ -56,6 +62,7 @@
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
         </div>
+        
         <div class="benefit-brand">
             <h3>Brand Awareness</h3>
             <img src="./assets/images/brand-awareness.png" />
@@ -71,6 +78,7 @@
             </p>
         </div>
     </div>
+    <!-- Webpage footer -->
     <div class="footer">
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
