--- a/index.html
+++ b/index.html
@@ -1,18 +1,20 @@
 <!DOCTYPE html>
 <html lang="en-us">
-
+<!-- This part is only for the person that is creating the webpage-->
+<!--Here come the link for the CCS style and some another links like if we want to change the family-g
+font from the page-->
 <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/style.css">
     <title>website</title>
 </head>
-<!-- Information about the Webpage-->
+<!-- Here come all the information for the webpage, without this file we can not craete a webpage-->
 <body>
-    <!-- Webpage Company Name-->
+    <!-- This is the top from the Webpage-->
     <div class="header">
         
         <h1>Hori<span class="seo">seo</span>n</h1>
-        <!-- Information About Company main services-->
+        <!-- This the unorderlist and each one have a link an a atributte-->
         <div>
             <ul>
                 <li>
@@ -27,7 +29,7 @@
             </ul>
         </div>
     </div>
-    <!-- Company img -->
+    <!-- -->
     <div class="hero"></div>
     <div class="content">
         <div class="search-engine-optimization">
@@ -37,7 +39,6 @@
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
             </p>
         </div>
-        <!-- Unorder list Company Information-->
         <div id="online-reputation-management" class="online-reputation-management">
             <img src="./assets/images/online-reputation-management.jpg" class="float-right" />
             <h2>Online Reputation Management</h2>
@@ -53,7 +54,7 @@
             </p>
         </div>
     </div>
-    <!-- Benefits Information-->
+    <!-- Benefits Information with the class atribut benefits-->
     <div class="benefits">
         <div class="benefit-lead">
             <h3>Lead Generation</h3>
