--- a/index.html
+++ b/index.html
@@ -1,20 +1,21 @@
+<!-- This part is only for the web developer that create the webpage-->
 <!DOCTYPE html>
+<!-- This is the lang attribute-->
 <html lang="en-us">
-<!-- This part is only for the person that is creating the webpage-->
-<!--Here come the link for the CCS style and some another links like if we want to change the family-g
-font from the page-->
+
 <head>
     <meta charset="UTF-8" />
+    <!--This is the CCS style link-->
     <link rel="stylesheet" href="./assets/css/style.css">
     <title>website</title>
 </head>
 <!-- Here come all the information for the webpage, without this file we can not craete a webpage-->
 <body>
-    <!-- This is the top from the Webpage-->
+    <!-- This is the header from the Webpage-->
     <div class="header">
         
         <h1>Hori<span class="seo">seo</span>n</h1>
-        <!-- This the unorderlist and each one have a link an a atributte-->
+        <!-- This the unorderlist with href attribute-->
         <div>
             <ul>
                 <li>
@@ -29,7 +30,7 @@ font from the page-->
             </ul>
         </div>
     </div>
-    <!-- -->
+    <!--This are the src attribute -->
     <div class="hero"></div>
     <div class="content">
         <div class="search-engine-optimization">
@@ -54,7 +55,7 @@ font from the page-->
             </p>
         </div>
     </div>
-    <!-- Benefits Information with the class atribut benefits-->
+    <!-- Benefits Information this is create in a <div> with a class attribut you will find <h3>, <img> and <p> -->
     <div class="benefits">
         <div class="benefit-lead">
             <h3>Lead Generation</h3>
@@ -79,7 +80,7 @@ font from the page-->
             </p>
         </div>
     </div>
-    <!-- Webpage footer -->
+    <!-- Webpage footer it is wrap in a <div> with an class attribut inside the <div> you will find the <h2> and the <p>-->
     <div class="footer">
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
