finish with the refactory

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8" />
     <!--This is the CCS style link-->
     <link rel="stylesheet" href="./assets/css/style.css">
-    <title>website</title>
+    <title>Horison Information Services</title>
 </head>
 <!-- Here come all the information for the webpage, without this file we can not craete a webpage-->
 <body>
